--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
            padding-left: 2em; /* indentation for blocks */
        }
    </style>
-  <title>Conor Houghton</title>
+  <title>IteratedLM</title>
    <link rel="icon"  type="image/x-icon" href="https://conorhoughton.github.io/small_star.ico?">
 </head>
 
@@ -24,19 +24,32 @@
 
      <td width="15"> 
 <td>
-  <h1 style="color: darkslategrey">Bayesian Cell Counts</h1>
-    <h2 style="color: darkslategrey">Paper</h2>
-  <p>
-  <i>Hierarchical Bayesian modeling of multi-region brain cell count data.</i><br>
-  Sydney Dimmock, Benjamin M.S. Exley,  Gerald Moore, Lucy Menage,  Alessio Delogu,  Simon R Schultz,  E Clea Warburton,  Conor J Houghton and  Cian O'Donnell<br>
-(Reviewed preprint at eLife, 2024)<br>
-<a href="https://elifesciences.org/reviewed-preprints/102391">eLife reviewed preprint</a>,  <a href="https://www.biorxiv.org/content/10.1101/2024.07.20.603979v1">bioRxiv</a>, bioRxiv doi: <a href=" https://doi.org/10.1101/2024.07.20.603979">10.1101/2024.07.20.603979</a></p>
-  <h2 style="color: darkslategrey">Code</h2>
-<p><i>BayesianCellCounts/DimmockEtAl2025: Hierarchical Bayesian modeling of multi-region brain cell count data. (v1.01).</i><br>
+  <h1 style="color: darkslategrey">Iterated learning model</h1>
+    <h2 style="color: darkslategrey">Papers</h2>
+<p>
+  <i>An Iterated Learning Model of language change that mixes supervised and unsupervised learning.</i><br>
+  Jack Bunyan, Seth Bullock and Conor Houghton<br>
+  PLOS Complex Systems 2(3): e0000030.<br>
+  doi: <a href="https://doi.org/10.1371/journal.pcsy.0000030">10.1371/journal.pcsy.0000030</a>, arxiv: <a href="https://arxiv.org/abs/2405.20818">2405.20818</a></p>
 
-  Sydney Dimmock, Conor Houghton and Cian O'Donnell (2025),<br>
-<a href="https://doi.org/10.5281/zenodo.16340993">doi.org/10.5281/zenodo.16340993</a></p>
+<p>
+  <i>Modeling language contact with the Iterated Learning Model.</i><br>
+  Seth Bullock and Conor Houghton,<br>
+  Artificial Life Conference Proceedings 36 (2024) 54<br>
+doi: <a href="https://doi.org/10.1162/isal_a_00779">10.1162/isal_a_00779</a>, arxiv: <a href="http://arxiv.org/abs/2406.06878">2406.06878</a></p>
+<h2 style="color: darkslategrey">Code</h2>
+<ul>
+  <li>code for Bunyan et al. (2025): <a href="https://github.com/IteratedLM/2023_12_ailm">github (julia)</a></li>
+  <li>python code for the model in Bunyan et al. (2025): <a href="https://github.com/IteratedLM/2025_04_ilm_python">github (python>(/a></li>
+  <li>code of Bullock and Houghton (2024): <a href="https://github.com/IteratedLM/2024_04_mix">github (julia)</a></li>
+</ul>
+<h2 style="color: darkslategrey">The participant study (2025)</h2>
+<ul>
+  <li>stimulus: <a href="https://github.com/IteratedLM/2025_06_animations">github (gifs / julia)</a>, doi: <a href=" https://doi.org/10.5281/zenodo.16425381">10.5281/zenodo.16425382</a></li>
+    <li>experiment: <a href="https://github.com/IteratedLM/2025_06_human">github (JSPsych)</a>, doi: <a href=" https://doi.org/10.5281/zenodo.16615852">10.5281/zenodo.16615852</a></li>
   <p><br></p>
+  <li>registration: <a href="https://osf.io/znkah">osf.io</a></li>
+  </ul>
 </td>
 </tr>
   </tbody>
