--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@ doi: <a href="https://doi.org/10.1162/isal_a_00779">10.1162/isal_a_00779</a>, ar
 <h2 style="color: darkslategrey">Code</h2>
 <ul>
   <li>code for Bunyan et al. (2025): <a href="https://github.com/IteratedLM/2023_12_ailm">github (julia)</a></li>
-  <li>python code for the model in Bunyan et al. (2025): <a href="https://github.com/IteratedLM/2025_04_ilm_python">github (python>(/a></li>
+  <li>python code for the model in Bunyan et al. (2025): <a href="https://github.com/IteratedLM/2025_04_ilm_python">github (python></a></li>
   <li>code of Bullock and Houghton (2024): <a href="https://github.com/IteratedLM/2024_04_mix">github (julia)</a></li>
 </ul>
 <h2 style="color: darkslategrey">The participant study (2025)</h2>
 <ul>
   <li>stimulus: <a href="https://github.com/IteratedLM/2025_06_animations">github (gifs / julia)</a>, doi: <a href=" https://doi.org/10.5281/zenodo.16425381">10.5281/zenodo.16425382</a></li>
     <li>experiment: <a href="https://github.com/IteratedLM/2025_06_human">github (JSPsych)</a>, doi: <a href=" https://doi.org/10.5281/zenodo.16615852">10.5281/zenodo.16615852</a></li>
-  <p><br></p>
   <li>registration: <a href="https://osf.io/znkah">osf.io</a></li>
-  </ul>
+</ul>
+  <p><br></p>
 </td>
 </tr>
   </tbody>
