quick go at a front page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ doi: <a href="https://doi.org/10.1162/isal_a_00779">10.1162/isal_a_00779</a>, ar
 <h2 style="color: darkslategrey">Code</h2>
 <ul>
   <li>code for Bunyan et al. (2025): <a href="https://github.com/IteratedLM/2023_12_ailm">github (julia)</a></li>
-  <li>python code for the model in Bunyan et al. (2025): <a href="https://github.com/IteratedLM/2025_04_ilm_python">github (python></a></li>
+  <li>python code for the model in Bunyan et al. (2025): <a href="https://github.com/IteratedLM/2025_04_ilm_python">github (python)</a></li>
   <li>code of Bullock and Houghton (2024): <a href="https://github.com/IteratedLM/2024_04_mix">github (julia)</a></li>
 </ul>
 <h2 style="color: darkslategrey">The participant study (2025)</h2>
